--- a/guide/guide.tex
+++ b/guide/guide.tex
@@ -65,13 +65,13 @@ This approach contrasts with the typical problem in statistical physics where on
 
 The pairwise maxent model, the Ising model, has been of particular interest because of its simplicity and generality. A variety of algorithms have been proposed to solve the inverse Ising problem, but different approaches are disparately available on separate code bases in different coding languages, which makes comparison difficult and pedagogy more complicated. With ConIII, it is possible to solve the inverse Ising problem with a variety of algorithms in just a few lines of code. 
 
-ConIII is intended to provide a centralized resource for the inverse Ising problem and easy extension to other maxent problems. Although some of the implemented algorithms are specific to the pairwise Ising model, other maxent models can be solved as well by specifying the particular constraints of the maxent model of interest. 
+ConIII is intended to provide a centralized resource for the inverse Ising problem and easy extension to other maxent problems. Although some of the implemented algorithms are specific to the pairwise Ising model, maxent models with arbitrary combinations of higher order constraints can be solved as well by specifying the particular constraints of the maxent model of interest. 
 %The modular structure of ConIII was inspired by the machine learning package scikit-learn, where each algorithm is implemented in a class.
 %There are a variety of techniques for approaching the inverse problem|often in context of a particular model|but they are often presented as different approaches without clear relations to one another. Instead of focusing on the details of each technique separately, we relate these techniques to one another and point out when one would fail or be difficult to apply.
 
 %We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level in physics and beyond (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
 
-In the first few sections of this paper, we give a brief overview of maxent and describe the algorithms implemented in this package (for those unfamiliar with maxent, we also provide some useful references especially Refs~\cite{Bialek:2012ueb} and the appendix of \cite{Lee:2015ev}). Then, we describe the architecture of the package and how to contribute.
+In the first few sections of this paper, we give a brief overview of maxent and describe at a high level the algorithms implemented in this package. For those unfamiliar with maxent, we also provide some useful references like Ref~\cite{Bialek:2012ueb} and the appendix of \cite{Lee:2015ev}. For those seeking more detail about the implemented algorithms, we provide references specific to each algorithm section. Then, we describe the architecture of the package and how to contribute.
 
 \section*{What is maximum entropy?}
 Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel \cite{Shannon:1948wk}. Information entropy is the unique measure of uncertainty that follows from insisting on elementary principles of consistency. According to Shannon, the entropy over the probability distribution $p(\rs)$ of possible discrete configurations $\mathcal S$ of a system is
@@ -83,7 +83,7 @@ These configurations could be on-off patterns of firing in neurons, the arrangem
 When there is no structure in the distribution, meaning that the probability is uniform, entropy is at a maximum. In the context of communication theory as Shannon first discussed, this means that there is no structure to exploit to make a prediction about the next part of an incoming message; thus, maximum entropy means that each new part of the message is maximally ``surprising.'' At the other extreme, when the message consists of the same bit over and over again, we can always guess at the following part of the message and the signal has zero entropy. In the context of modeling, we use entropy not to refer to the difficulty of the message, but to our state of knowledge about it. Entropy precisely measures our uncertainty about the configuration in which we expect to find the system.
 
 Maximum entropy, or maxent, is the formal framework for building models that are consistent with statistics from the data but otherwise as structureless as possible \cite{Bretthorst:2003ua,Jaynes:1957fy}.
-We begin by choosing a set of $K$ useful or important features from the data $f_{\rm k}(\rs)$ that should be true for the model that we are trying to build. These could be the averaging firing probabilities of a set of neurons or the average pairwise coocurrence for primates in a sequence of conflicts. The average of this feature across set of states in the data set $\mathcal{D}$ with $R$ elements is
+We begin by choosing a set of $K$ useful or important features from the data $f_{\rm k}(\rs)$ that should be true for the model that we are trying to build. These could be whether or not a set of neurons fire together in a temporal bin or the pairwise coincidence for primates in a conflicts. The average of this feature across the data set $\mathcal{D}$ with $R$ samples is
 \begin{align}
 	\br{f_{\rm k}}_{\rm data} &= \frac{1}{R}\sum_{{\rm s}\in \mathcal{D}} f_{\rm k}({\rm s}).
 \end{align}
@@ -127,18 +127,19 @@ Finding the parameters $\lambda_{\rm k}$ that match the constraints $\br{f_{\rm 
  In other words, the parameters of the maxent model are the ones that minimize the information theoretic ``distance'' to the distribution of the data given the constraints. Note that these parameters are given by the data: once the constraints have been chosen, there is a single maxent solution, with no free parameters.
 
 \subsection*{The Ising model}
-The Ising model is a statistical physics model of magnetism \cite{Ising:1924vf}. It consists of a set of spins $\rs_{\rm i}$ with 2 possible orientations (up and down), each coupled to an external magnetic field $h_{\rm i}$ and coupled to each other with pairwise couplings $J_{\rm ij}$. The strength of the magnetic field determines the tendency of each of the spins to orient in a particular direction and the couplings determine whether the spins tend to point together ($J_{\rm ij}>0$) or against each other ($J_{\rm ij}<0$). Typically, neighbors are defined as spins that interact with one another given by some underlying network structure. Figure \ref{gr:ising} shows a fully-connected example.
+The Ising model is a statistical physics model of magnetism \cite{Ising:1924vf}. It consists of a set of spins $\{\rs_{\rm i}\}$ with 2 possible orientations (up and down), each responds to its own external magnetic field $h_{\rm i}$ and each pair is coupled to each other with pairwise coupling $J_{\rm ij}$. The strength of the magnetic field determines the tendency of each of the spins to orient in a particular direction and the couplings determine whether the spins tend to point together ($J_{\rm ij}>0$) or against each other ($J_{\rm ij}<0$). Typically, neighbors are defined as spins that interact with one another given by some underlying network structure. Figure \ref{gr:ising} shows a fully-connected example.
 
 \begin{figure}[tb]\centering
 	\includegraphics[width=.65\linewidth,clip,trim={100 70 70 60}]{ising_example.pdf}
-\caption{Example of a fully connected Ising model with random couplings. Each spin $\rs_{\rm i}$ (circle) can take one of two states (black or white, corresponding to $-1$ and $+1$) and is connected to every other spin in the system with a positive or negative coupling. These states could describe the on-off patterns of firing in neurons, the arrangement of letters in a word, or the orientation of spins in a material. This schematic represents one possible state of the spins.  The inverse Ising problem starts with statistics about the states observed in the system and infers the coupling strengths $J_{\rm ij}$ and individual biases $h_{\rm i}$ that reproduce such statistics. }
+\caption{Example of a fully connected pairwise Ising model with positive and negative couplings. Each spin $\rs_{\rm i}$ (circle) can take one of two states (black or white, corresponding to $-1$ and $1$) and is connected to every other spin in the system with a positive (red) or negative (blue) coupling. These states could describe the on-off patterns of firing in neurons, the orientation of spins in a material, or if each spin is no longer binary the arrangement of letters in a word (a Potts model).}
 \label{gr:ising}
 \end{figure}
 
-The energy of each configuration determines its probability via Eq \eqref{eq:energy} such that lower energy states are more probable:
+The energy of each configuration determines its probability via Eq \eqref{eq:energy},
 \begin{align}
-	E(\rs) &= -\sum_{\rm i<j}^N J_{\rm ij}\si\sj -\sum_{\rm i=1}^Nh_{\rm i}\si.
+	E(\rs) &= -\sum_{\rm i<j}^N J_{\rm ij}\si\sj -\sum_{\rm i=1}^Nh_{\rm i}\si,
 \end{align}
+such that lower energy states are more probable.
 %States with lower energy are more likely so spin tend to orient along the direction of the local field $h_{\rm i}^{\rm local} = \sum_{\rm j}J_{\rm ij}\sj +h_{\rm i}$. 
 
 We can derive the Ising model from the perspective of maxent. Fixing the the means and pairwise correlations to those observed in the data
