--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -2,7 +2,7 @@ Changelog
 
 
 v1.0.4 (Released ??)
------------------------
+----------------------
 - Now compatible with multiprocess v0.70.6.
 - Updated sampling method for Metropolis to be more efficient by running fewer systems for longer and taking
   iterative samples instead of starting with a completely new system for every sample (which takes longer to
@@ -10,3 +10,7 @@ v1.0.4 (Released ??)
   evenly amongst all running processes)..
 - Added working version of ParallelTempering sampler.
 
+
+v1.0.3 (Released 2018/11)
+-----------------------
+- First official release.
