--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,15 +1,16 @@
 Changelog
 
 
-v1.0.4 (Released ??)
+v1.1.0 (Released ??)
 ----------------------
-- Now compatible with multiprocess v0.70.6.
+- Now compatible with multiprocess v0.70.6
 - Updated sampling method for Metropolis to be more efficient by running fewer systems for longer and taking
   iterative samples instead of starting with a completely new system for every sample (which takes longer to
   burn in and requires starting new processes). This is automated such that the number of samples is divided
   evenly amongst all running processes)..
 - Added working version of ParallelTempering sampler.
-
+- n_cpus and nCpus are now used to refer to number of allowed processes to spawn and got rid of cpu_count which
+  can be confused in `multiprocess.cpu_count`.
 
 v1.0.3 (Released 2018/11)
 -----------------------
