--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,10 +1,10 @@
 Log for major changes
 
 
-v1.1.3 (Released 2018/12/??)
+v1.1.3 (Released 2018/12/17)
 ----------------------------------------------------
 - Update to Ising equation files in v1.1.0 to make them much smaller used Scipy's
-  logsumexp function which is slow! With own simple implementation, code is at least
+  logsumexp function which is slow! With own light implementation, code is at least
   several times faster to evaluate.
 
 v1.1.2 (Released 2018/12/16)
