updated release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,7 +23,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
-v1.1.6 (Released 2019/03/??)
+v1.1.6 (Released 2019/03/12)
 ----------------------------------------------------
 - Bug fixes.
 
