--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,9 +23,9 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
-v1.1.7 (Released 2019/03/??)
+v1.1.7 (Released 2019/03/20)
 ----------------------------------------------------
-- Bug fixes in interface.
+- Interface bug fixes.
 - Updated dependency requirements to later versions of numba and numpy.
 
 v1.1.6 (Released 2019/03/12)
