--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,6 +23,10 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
+v1.1.9 (Releated 2019/04/??)
+----------------------------------------------------
+- Added support for Potts models in enumerate_potts.py module.
+
 v1.1.8 (Released 2019/04/08)
 ----------------------------------------------------
 - Bug fixes.
