some typos in ipynb usage guide

--- a/ipynb/usage_guide.ipynb
+++ b/ipynb/usage_guide.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "The Enumerate class implements the most direct approach to solving the inverse Ising problem by writing out all the constraint equations. This involves enumerating all the terms in the partition function $Z$. Then, we find the solution using `scipy.optimize.root` as detailed in the `Enumerate.solve` method.\n",
     "<br><br><br>\n",
     "Using the Enumerate class consists of a few steps.\n",
-    "1. Use `enumerate.py` helper module to write the equations corresponding to the system of interest. All pairwise Ising systems from sizes $n=2$ up to $n=9$ are already included in the `coniii.ising_eqn` module. To write the equations for the $n=5$ Ising model that we use an example in this notebook, you first navigate to the installation directory in the site-package directory (this can be found by running `import coniii` and then `coniii.__path__`). Then, run in the terminal,<br><br>\n",
+    "1. Use `enumerate.py` helper module to write the equations corresponding to the system of interest. All pairwise Ising systems from sizes $n=2$ up to $n=9$ are already included in the `coniii.ising_eqn` module. But as an example, we can write the equations for the $n=5$ Ising model that we use on this notebook. First, you navigate to the installation directory in the site-package directory (this can be found by running `import coniii` and then `coniii.__path__`). Then, run in the terminal,<br><br>\n",
     "`python enumerate.py 5 1`<br>  \n",
     "The first argument to `enumerate.py` is the system size and the 1 indicates that the equations should be written for the symmetric Ising model $\\sigma_{\\rm i}\\in\\{-1,1\\}$. For $\\sigma_{\\rm i}\\in \\{0,1\\}$, we would put a 0 instead. The naming convention is \"ising_eqn_[n][_sym].py\" where n is the system size and \"_sym\" is the suffix if the spins are symmetric. Some more details are in the __main__ block at the bottom of `enumerate.py`. Note that file size grows exponentially with the size of the system!\n",
     "\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -129,14 +129,6 @@
       "Error on multipliers: 2.494566E-16\n",
       "Error on sample corr: 4.023216E-01\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/eddie/anaconda/envs/scotus/lib/python3.7/site-packages/coniii/solvers.py:285: UserWarning: fsolve_kwargs is deprecated as of v1.1.4 and does nothing. Use scipy_solver_kwargs instead.\n",
-      "  warn(\"fsolve_kwargs is deprecated as of v1.1.4 and does nothing. Use scipy_solver_kwargs instead.\")\n"
-     ]
     }
    ],
    "source": [
@@ -145,7 +137,11 @@
     "    \"\"\"\n",
     "    Calculate observables from probability distribution given Langrangian multipliers. For\n",
     "    the Ising model, these are the means of each spin and the pairwise correlations.\n",
+    "    \n",
+    "    This is equivalent to the calculation happening in ising_eqn_5_sym.calc_observables() \n",
+    "    (though the code is not the same).\n",
     "    \"\"\"\n",
+    "    \n",
     "    E = calc_e(allstates, J)\n",
     "    return pair_corr( allstates, np.exp(-E-logsumexp(-E)), concat=True )\n",
     "\n",
@@ -156,7 +152,7 @@
     "solver = Enumerate(n,\n",
     "                   calc_observables_multipliers=calc_observables_multipliers,\n",
     "                   calc_observables=calc_observables)\n",
-    "estMultipliers = solver.solve(constraints=sisjTrue, fsolve_kwargs={})\n",
+    "estMultipliers = solver.solve(constraints=sisjTrue)\n",
     "\n",
     "print(\"Error on multipliers: %E\"%error_on_multipliers(estMultipliers))\n",
     "print(\"Error on sample corr: %E\"%error_on_correlations(\n",
@@ -165,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
