additions to usage guide further notes and license

--- a/ipynb/usage_guide.ipynb
+++ b/ipynb/usage_guide.ipynb
@@ -1,10 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "MIT License\n",
+    "\n",
+    "Copyright (c) 2019 Edward D. Lee, Bryan C. Daniels\n",
+    "\n",
+    "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+    "of this software and associated documentation files (the \"Software\"), to deal\n",
+    "in the Software without restriction, including without limitation the rights\n",
+    "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+    "copies of the Software, and to permit persons to whom the Software is\n",
+    "furnished to do so, subject to the following conditions:\n",
+    "\n",
+    "The above copyright notice and this permission notice shall be included in all\n",
+    "copies or substantial portions of the Software.\n",
+    "\n",
+    "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+    "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+    "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+    "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+    "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+    "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+    "SOFTWARE."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inverse Ising problem\n",
+    "# Usage guide to Convenient Interface to Inverse Ising\n",
     "Edward D. Lee, Bryan C. Daniels  \n",
     "\n",
     "This notebook gives examples of how to use the various algorithms included in ConIII for solving the inverse Ising problem. \n",
@@ -20,7 +47,7 @@
     "\n",
     "This notebook is structured such that it starts with setting up a simple $n=5$ model to solve. In this case, there are 15 parameters to find. Five parameters are the mean fields $h_{\\rm i}$ corresponding to the mean orientation (magnetization) of the spins and ten parameters are for the pairwise couplings $J_{\\rm ij}$ corresponding to the pairwise correlations. At the end of the notebook, we show how one can extend the package to handle higher order interactions (triplet interactions) with the MPF and MCH algorithms.\n",
     "\n",
-    "Feel free to open an issue on our GitHub page if you have any questions or comments. We welcome feedback!"
+    "Feel free to open an issue on our GitHub page if you have any questions, comments, or feature requests. We welcome feedback!"
    ]
   },
   {
@@ -34,19 +61,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     }
    ],
    "source": [
     "# Setup iPython environment.\n",
     "%pylab inline\n",
-    "plt.rc('font',size=20)\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "plt.rc('font',size=20)"
    ]
   },
   {
@@ -106,15 +128,18 @@
     "The Enumerate class implements the most direct approach to solving the inverse Ising problem by writing out all the constraint equations. This involves enumerating all the terms in the partition function $Z$. Then, we find the solution using `scipy.optimize.root` as detailed in the `Enumerate.solve` method.\n",
     "<br><br><br>\n",
     "Using the Enumerate class consists of a few steps.\n",
-    "1. Use `enumerate.py` helper module to write the equations corresponding to the system of interest. All pairwise Ising systems from sizes $n=2$ up to $n=9$ are already included in the `coniii.ising_eqn` module. But as an example, we can write the equations for the $n=5$ Ising model that we use on this notebook. First, you navigate to the installation directory in the site-package directory (this can be found by running `import coniii` and then `coniii.__path__`). Then, run in the terminal,<br><br>\n",
+    "1. Use `enumerate.py` helper module to write the equations corresponding to the system of interest. All pairwise Ising systems from sizes $n=2$ up to $n=9$ are already included in the `coniii.ising_eqn` module. But as an example, we can write the equations for the $n=5$ Ising model that we use in this notebook. First, you navigate to the installation directory in the site-package directory (this can be found by running `import coniii` and then `coniii.__path__`). Then, run in the terminal,<br><br>\n",
     "`python enumerate.py 5 1`<br>  \n",
-    "The first argument to `enumerate.py` is the system size and the 1 indicates that the equations should be written for the symmetric Ising model $\\sigma_{\\rm i}\\in\\{-1,1\\}$. For $\\sigma_{\\rm i}\\in \\{0,1\\}$, we would put a 0 instead. The naming convention is \"ising_eqn_[n][_sym].py\" where n is the system size and \"_sym\" is the suffix if the spins are symmetric. Some more details are in the __main__ block at the bottom of `enumerate.py`. Note that file size grows exponentially with the size of the system!\n",
+    "The first argument to `enumerate.py` is the system size and the 1 indicates that the equations should be written for the symmetric Ising model $\\sigma_{\\rm i}\\in\\{-1,1\\}$. For $\\sigma_{\\rm i}\\in \\{0,1\\}$, we would put a 0 instead. The naming convention is \"ising_eqn_[n][\\_sym].py\" where n is the system size and \"\\_sym\" is the suffix if the spins are symmetric. Some more details are in the __main__ block at the bottom of `enumerate.py`. Note that file size grows exponentially with the size of the system!\n",
     "\n",
     "\n",
     "3. Define the function for calculating the observables (usually the mean of each spin and pairwise correlations) using the parameters (Langrangian multipliers). This will be passed into `calc_observables_multipliers`.<br><br>\n",
     "2. Use the Enumerate class to solve the equations written in the resulting file.\n",
     "\n",
-    "As a test of the Enumerate class below, we show that fitting to the known values of $\\langle\\sigma_{\\rm i}\\rangle$ and $\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle$ recovers the exact values of the parameters. Unfortunately, this approach scales very poorly (exponentially in memory and time) for large systems.<br><br>"
+    "As a test of the Enumerate class below, we show that fitting to the known values of $\\langle\\sigma_{\\rm i}\\rangle$ and $\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle$ recovers the exact values of the parameters. Unfortunately, this approach scales very poorly (exponentially in memory and time) for large systems.<br><br>\n",
+    "#### Addenda (added April 2019)\n",
+    "- High precision versions of the Ising model equations using the mpmath module are possible with the `-hp=true` keyword argument.\n",
+    "- The `enumerate_potts.py` module provides limited support for Potts models. At the moment, functionality for writing the $k$-Potts model with $k$-dimensional field terms but only couplings for the average correlation across all $k$ dimensions is supported."
    ]
   },
   {
@@ -138,8 +163,9 @@
     "    Calculate observables from probability distribution given Langrangian multipliers. For\n",
     "    the Ising model, these are the means of each spin and the pairwise correlations.\n",
     "    \n",
-    "    This is equivalent to the calculation happening in ising_eqn_5_sym.calc_observables() \n",
-    "    (though the code is not the same).\n",
+    "    This is analogous to the calculation happening in ising_eqn_5_sym.calc_observables().\n",
+    "    This means that ising_eqn_5_sym.calc_observables could be passed into the keyword arg\n",
+    "    below instead, but we have explicitly defined this function here for demo purposes.\n",
     "    \"\"\"\n",
     "    \n",
     "    E = calc_e(allstates, J)\n",
