--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -26,6 +26,7 @@ SOFTWARE.
 v1.1.9 (Releated 2019/04/??)
 ----------------------------------------------------
 - Added support for Potts models in enumerate_potts.py module.
+- Typos in usage guide Jupyter notebook fixed.
 
 v1.1.8 (Released 2019/04/08)
 ----------------------------------------------------
