add Ising class in the ising module

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -23,7 +23,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
 
-v1.1.9 (Releated 2019/04/??)
+v1.1.9 (Released 2019/04/??)
 ----------------------------------------------------
 - Added support for Potts models in enumerate_potts.py module.
 - Typos in usage guide Jupyter notebook fixed.
