--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -22,6 +22,8 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
+v1.2.0 (Released 2019/04/??)
+----------------------------------------------------
 
 v1.1.9 (Released 2019/04/22)
 ----------------------------------------------------
