--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -22,6 +22,9 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
+v1.2.2 (Released 2019/09/19)
+----------------------------------------------------
+- Minor maintenance.
 
 v1.2.1 (Released 2019/05/31)
 ----------------------------------------------------
